# oceanpol_kit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
oceanpol_kit/: __init__.py  atten.py  core.py  echo_class.py  echo_steiner.c  echo_steiner.pyx  grid.py  hydro.py  temperature.py
oceanpol_kit/libs/: README  echo_steiner.c  echo_steiner.f90  echo_steiner.h
scripts/: process.py  process_opol.py
