[build-system]
requires = [
    "setuptools >= 70.0",
    "wheel",
    "cython >= 3.0.8",
    "numpy >= 1.21",          # for headers during build
]
build-backend = "setuptools.build_meta"

[project]
name = "oceanpol_kit"
dynamic = ["version"]
description = "A processing suite for OceanPOL radar data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Valentin Louf", email = "valentin.louf@bom.gov.au"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "pyodim",
    "unravel",
    #"arm_pyart",
    #"csu_radartools",
    #"phido @ git+https://github.com/jordanbrook/phido.git",
    "numpy >= 1.21",
    "pandas",
    "xarray",
    "cftime",
    #"numba",
]

[project.urls]
Homepage = "https://github.com/vlouf/oceanpol_kit"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages.find = {where = ["."], include = ["oceanpol_kit*"]}
package-data = {"oceanpol_kit" = ["*.pxd", "*.pxi", "*.h"]}

[tool.setuptools.dynamic]
version = {attr = "oceanpol_kit.__version__"}

[tool.cython.cythonize]
language-level = "3str"
